# wasm-micro-runtime

./: CMakeLists.txt  code_analysis.sh
.github/workflows/: codeql.yml  supply_chain.yml
build-scripts/: SConscript  config_common.cmake  runtime_lib.cmake
core/: config.h
core/iwasm/aot/: aot_runtime.c
core/iwasm/common/: wasm_application.c  wasm_exec_env.h  wasm_ieee754.h  wasm_memory.c  wasm_native.c  wasm_runtime_common.c  wasm_runtime_common.h
core/iwasm/common/component-model/: iwasm_component.cmake  wasm_canonical_abi.c  wasm_canonical_abi.h  wasm_component_alias_section.c  wasm_component_application.c  wasm_component_canon.c  wasm_component_canon.h  wasm_component_canonical.c  wasm_component_canonical.h  wasm_component_canons_section.c  wasm_component_component_section.c  wasm_component_core_instance_section.c  wasm_component_core_module_section.c  wasm_component_core_type_section.c  wasm_component_export.c  wasm_component_export.h  wasm_component_exports_section.c  wasm_component_flat.c  wasm_component_flat.h  wasm_component_host_resource.c  wasm_component_host_resource.h  wasm_component_imports_section.c  wasm_component_instances_section.c  wasm_component_resource.c  wasm_component_resource.h  wasm_component_resource_table.c  wasm_component_resource_table.h  wasm_component_runtime.c  wasm_component_runtime.h  wasm_component_start_section.c  wasm_component_task.c  wasm_component_task.h  wasm_component_types_section.c  wasm_component_values_section.c
core/iwasm/common/wave-parser/: wave_adapter.c  wave_adapter.h  wave_lexer.l  wave_parser.cmake  wave_parser.y
core/iwasm/include/: wasm_export.h
core/iwasm/interpreter/: wasm.h  wasm_interp_classic.c  wasm_interp_fast.c  wasm_loader.c  wasm_runtime.c  wasm_runtime.h
core/iwasm/libraries/libc-wasi-p2/: SConscript  libc_wasi_p2.cmake  libc_wasi_p2_wrapper.c  libc_wasi_p2_wrapper.h  wasi_p2_cli.c  wasi_p2_cli.h  wasi_p2_cli_wrapper.c  wasi_p2_cli_wrapper.h  wasi_p2_clocks.c  wasi_p2_clocks.h  wasi_p2_clocks_wrapper.c  wasi_p2_clocks_wrapper.h  wasi_p2_common.c  wasi_p2_common.h  wasi_p2_error.c  wasi_p2_error.h  wasi_p2_filesystem.c  wasi_p2_filesystem.h  wasi_p2_filesystem_wrapper.c  wasi_p2_filesystem_wrapper.h  wasi_p2_io.c  wasi_p2_io.h  wasi_p2_io_wrapper.c  wasi_p2_io_wrapper.h  wasi_p2_random.c  wasi_p2_random.h  wasi_p2_random_wrapper.c  wasi_p2_random_wrapper.h  wasi_p2_sockets.c  wasi_p2_sockets.h  wasi_p2_sockets_wrapper.c  wasi_p2_sockets_wrapper.h  wasi_p2_types.h
core/iwasm/libraries/libc-wasi/sandboxed-system-primitives/src/: posix.c  posix.h
doc/: component_model.md
product-mini/: README.md
tests/fuzz/component-fuzz/: .gitignore  CMakeLists.txt  README.md
tests/fuzz/component-fuzz/component-parser/: component_parser_fuzz.cc  host_resolve_stubs.c
tests/unit/: CMakeLists.txt
tests/unit/aot-stack-frame/wasm-apps/: CMakeLists.txt
tests/unit/canonical-abi/: CMakeLists.txt  test_canonical_abi.cc  test_lift_flat.cc  test_lift_flat_values.cc  test_load.cc  test_lower_flat.cc  test_lower_flat_values.cc  test_store.cc  var_in_mem_layout.txt
tests/unit/canonical-abi/wasm-apps/: loaded.wasm  stored.wasm  var_in_mem.wasm
tests/unit/canonical-execution/: CMakeLists.txt  test_canonical.cc
tests/unit/canonical-execution/test-dir/dest/: hello_copy.txt
tests/unit/canonical-execution/test-dir/source/: hello_test.txt
tests/unit/canonical-execution/wasm-apps/: hello_component.wasm  hello_component_updated.wasm  hello_world.wasm  ip_name_lookup.wasm  ip_name_lookup_default.wasm  ip_name_lookup_local.wasm  tcp_server_c.wasm  test_filesystem_paths_comp.wasm  udp_client.wasm  udp_client_2.wasm  udp_server.wasm  udp_server_2.wasm  udp_server_c.wasm  udp_server_lib.wasm  wasi_cli.wasm  wasi_cli_c.wasm  wasi_clocks.wasm  wasi_clocks_c.wasm  wasi_filesystem.wasm  wasi_filesystem_2.wasm  wasi_filesystem_c.wasm  wasi_filesystem_debug.wasm  wasi_io.wasm  wasi_random.wasm  wasi_random_c.wasm  wasi_server.wasm  wasip1_tcp_server.wasm  wasip2_tcp_server.wasm
tests/unit/common/: test_helper.h
tests/unit/component/: CMakeLists.txt  helpers.cc  helpers.h  test_binary_parser.cc  test_host_resource_table.cc  test_resource_table.cc
tests/unit/component-execution/: CMakeLists.txt  test_execution.cc
tests/unit/component-execution/wasm-apps/: add.wasm
tests/unit/component-instantiation/: CMakeLists.txt  helpers.cc  helpers.h  test_instantiation.cc  test_wasm_component.c  test_wasm_component.h
tests/unit/component-instantiation/wasm-apps/: hello_wasi.wasm  hello_wasip1_hacked.component.wasm  surface_and_geometry.wasm  surface_and_geometry_0_2_0.wasm  surface_and_geometry_0_4_0.wasm
tests/unit/libc-wasi-p2/: CMakeLists.txt  test_libc_wasi_p2_wrapper.cc  test_sandboxed_env.cc  test_wasi_p2_cli.cc  test_wasi_p2_cli_wrapper.cc  test_wasi_p2_clocks.cc  test_wasi_p2_clocks_wrapper.cc  test_wasi_p2_filesystem.cc  test_wasi_p2_filesystem_wrapper.cc  test_wasi_p2_io.cc  test_wasi_p2_io_wrapper.cc  test_wasi_p2_random.cc  test_wasi_p2_random_wrapper.cc  test_wasi_p2_sockets.cc  test_wasi_p2_sockets_wrapper.cc
tests/unit/libc-wasi-p2/test_dir/: test_file.txt
tests/unit/libc-wasi-p2/wasm-apps/: test_cli_comp.wasm  test_clocks_comp.wasm  test_filesystem_comp.wasm  test_io_comp.wasm  test_random_comp.wasm  test_sockets_comp.wasm
tests/unit/wave-parser/: CMakeLists.txt  test_wave_parser.cc
tests/wamr-test-suites/: test_wamr.sh
