cmake_minimum_required(VERSION 3.28)

project (test-canonical-abi)

add_definitions (-DRUN_ON_LINUX)

add_definitions (-Dattr_container_malloc=malloc)
add_definitions (-Dattr_container_free=free)

set (WAMR_BUILD_INTERP 1)
set (WAMR_BUILD_LIBC_WASI 1)
set (WAMR_BUILD_COMPONENT_MODEL 1)
set (WAMR_BUILD_APP_FRAMEWORK 1)
set (WAMR_BUILD_AOT 0)
set (WAMR_BUILD_REF_TYPES 1)
set (WAMR_BUILD_MULTI_MODULE 0)
set (WAMR_BUILD_LOAD_CUSTOM_SECTION 1)
set (WAMR_BUILD_SIMD 0)

include (../unit_common.cmake)

include_directories (${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/../component)

file (GLOB_RECURSE source_all ${CMAKE_CURRENT_SOURCE_DIR}/*.cc)

set (UNIT_SOURCE ${source_all})

aux_source_directory(. SRC_LIST)

set (unit_test_sources
     ${UNIT_SOURCE}
     ${CMAKE_CURRENT_SOURCE_DIR}/../component/helpers.cc
     ${PLATFORM_SHARED_SOURCE}
     ${UTILS_SHARED_SOURCE}
     ${MEM_ALLOC_SHARED_SOURCE}
     ${NATIVE_INTERFACE_SOURCE}
     ${LIBC_BUILTIN_SOURCE}
     ${LIBC_WASI_SOURCE}
     ${IWASM_COMMON_SOURCE}
     ${IWASM_COMPONENT_SOURCE}
     ${IWASM_INTERP_SOURCE}
     ${UNCOMMON_SHARED_SOURCE}
    )

# Now simply link against gtest or gtest_main as needed. Eg
add_executable (wave-parser ${unit_test_sources})

find_package(Threads REQUIRED)
target_link_libraries (wave-parser ${LLVM_AVAILABLE_LIBS} ${WAMR_TEST_OPENSSL_LIBS} gmock gtest_main Threads::Threads)

target_compile_definitions(wave-parser PRIVATE WAMR_BUILD_COMPONENT_MODEL=1)

gtest_discover_tests(wave-parser)